# web_m14

./: README.md
web_13/: main.py  pyproject.toml
web_13/docs/source/: conf.py
web_13/migrations/: env.py
web_13/migrations/versions/: fc2d190734d2_init.py
web_13/postgres-data/base/16384/: 1247  16399  2604  2606  2610  2620  2657  2659  2662  2664  2665  2674  2699  2702  2703  2704  3455  5002  pg_internal.init
web_13/postgres-data/base/5/: pg_internal.init
web_13/postgres-data/global/: 1260  1262  pg_control  pg_internal.init
web_13/postgres-data/pg_stat/: pgstat.stat
web_13/src/conf/: config.py
web_13/src/database/: models.py
web_13/src/routes/: auth.py
web_13/src/services/: auth.py  email.py
web_13/tests/: conftest.py  test_unit_repository_users.py
web_14/: alembic.ini  docker-compose.yml  main.py  requirements.txt
web_14/docs/source/: index.rst
web_14/postgres-data/base/16384/: 1249  1259  16388  16391  16404  16421  2224  2579  2608  2656  2658  2663  2666  2667  2673  2678  2679  2701
web_14/postgres-data/global/: 2671
web_14/src/: schemas.py
web_14/src/conf/: config.py
web_14/src/database/: db.py
web_14/src/repository/: users.py
web_14/src/routes/: auth.py  contacts.py  tokens.py
web_14/src/services/: auth.py
web_14/tests/: test_routes_contacts.py  test_unit_repository_users.py
